# parity-processbot

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CODEOWNERS  Cargo.toml  Dockerfile  Dockerfile.README.md  Process.json  Process.toml  Project.toml  Projects.toml  README.md  deploy-stg.sh  run.sh  spec.txt  testing_file.txt
.circleci/: config.yml
.github/workflows/: github-issue-sync.yml
helm/: Chart.yaml  values-parity-prod.yaml  values-staging.yaml  values.yaml
helm/templates/: env-secrets.yaml  processbot-ingress.yaml  processbot-secret.yaml  processbot.yaml
kubernetes/processbot/: Chart.yaml  processbot.yaml  values-parity-prod.yaml  values-staging.yaml  values.yaml
kubernetes/processbot/templates/: env-secrets.yaml  processbot-ingress.yaml  processbot-secret.yaml  processbot.yaml
scripts/: run_integration_tests.sh
src/: .auto_merge.rs.rustfmt  .issue.rs.rustfmt  .server.rs.rustfmt  auth.rs  auto_merge.rs  bamboo.rs  bot.rs  botconfig.toml  bots.rs  cargo_build.rs  cmd.rs  companion.rs  compare_release.rs  config.rs  constants.rs  core.rs  db.rs  developer.rs  duration_ticks.rs  error.rs  git_ops.rs  github.rs  github_bot.rs  gitlab.rs  gitlab_bot.rs  http.rs  issue.rs  issue_assignment.rs  issue_missing.rs  issue_project.rs  lib.rs  local_state.rs  macros.rs  main.rs  matrix.rs  matrix_bot.rs  merge_request.rs  performance.rs  process.rs  project.rs  (+16 more)
src/github/: bot.rs  commit.rs  companion.rs  http.rs  issue.rs  merge_request.rs  mod.rs  organization.rs  pull_request.rs  rebase.rs  repository.rs  review.rs  status.rs  team.rs  utils.rs
src/github/client/: commit.rs  file.rs  issue.rs  mod.rs  org.rs  pull_request.rs
src/github_bot/: commit.rs  file.rs  issue.rs  mod.rs  org.rs  organization.rs  project.rs  pull_request.rs  release.rs  repository.rs  review.rs  tag.rs  team.rs
src/logging/: gke.rs  mod.rs
tests/: companion.rs  merge.rs
tests/helpers/: cmd.rs  constants.rs  mod.rs  setup.rs
tests/snapshots/: companion__team_lead_merges_pr.snap  merge__recovers_from_outdated_master.snap  merge__simple_merge_succeeds.snap
tests/utils/: cmd.rs  common.rs  mod.rs
