[package]
name = "parity-processbot"
version = "0.1.0"
authors = ["Joseph Mark <sjeohp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
byteorder = "1.4.3"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = { version = "0.3.17", features = ["async-await"] }
futures-util = { version = "0.3.17", features = ["async-await"] }
hyperx = "=1.3.0"
log = "0.4.14"
reqwest = { version = "0.11.6", features = ["json"] }
rocksdb = "0.17.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
snafu = "0.6.10"
tokio = { version = "1.12.0", features = ["full"] }
curl = "0.4.39"
curl-sys = "0.4.49"
regex = "1.5.4"
toml = "0.5.8"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
itertools = "0.10.1"
parking_lot = "0.11.2"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
bincode = "1.3.3"
ring = "0.16.20"
base16 = { version = "0.2.1", features = ["alloc"] }
anyhow = "1.0.44"
async-std = { version = "1.10.0", features = ["unstable"] }
hyper = { version = "=0.14", features = ["stream", "server"] } 
serde_yaml = "0.8.21"
thiserror = "1.0.30"
url = "2.2.2"
html-escape = "0.2.9"
cargo-lock = "7.0.1"
eventsource = "0.5.0"
